--- v1.3 (2016-xx-xx) ---
* Add new packages: yasm, libjpeg-turbo, protobuf, sdl2.
* Bump GCC_EXTRA_VER from 5.1.0 to 5.2.0.

--- v1.2 (2015-07-11) ---
* Rewrite IsVer1GreaterOrEqualToVer2() function without using of dpkg
  (for non Debian-based systems).
* Update OPENSSL_VER from 1.0.2a to 1.0.2d  in all static configs.
* Add support of AstraLinux 1.3 and 1.4 [amd64] (static).
* Add new packages: libgpg-error, libfcgi.
* Fix build of openssl package.

--- v1.1 (2015-07-06) ---
* Fix installation of glibc older than 2.16.0.
* Update GCC_VER and add GCC_EXTRA_VER into all configs.
* Update package gcc: now it provides the same GCC version as in original
  distro or the latest version from the same GCC series (for example, 4.8.x).
* Add new package gcc-extra with modern versions of GCC (now it is 5.1.0).
  GCC from this package is required for compiling the newest versions of Qt5
  and OpenSceneGraph. You may use this compiler when your application uses
  features from C++11 or C++14. Do not forget to link libstdc++ statically.
* Add new package qtconnectivity.
* Add support of Ubuntu 14.04-LTS [i586 and amd64] (shared).
* Update QT5_VER (from 5.4.2 to 5.5.0) in all configs except AstraLinux 1.2
  (too old Glibc there).

--- v1.0 (2015-06-24) ---
* Fix build of glibc 2.16.0 and later.
* Update config for Ubuntu 14.04-LTS [i586] (static).
* Add support of Ubuntu 14.04-LTS [amd64] (static).
* Rename TARGET from ${ARCH}-pc-linux-gnu to ${ARCH}-cross-linux-gnu.
* Improve build logging.

--- v0.9 (2015-06-17) ---
* Add support of builds for i386, i486, i586 and i686 on x86_64 system.
* Add support of AstraLinux 1.3 [amd64] (shared).
* Add support of Ubuntu 14.04-LTS [i586] (static).
* Change `./make.sh clean` behaviour: now it deletes only sub-directories
  specified in CONFIGS variable from settings.sh

--- v0.8 (2015-06-04) ---
* First public release.
