@@ -11,7 +11,7 @@ GCC_VER=4.3.6
 # GCC_EXTRA_VER=4.9.3
 GCC_EXTRA_VER=5.2.0
 # BINUTILS_VER=2.18
-BINUTILS_VER=2.25
+BINUTILS_VER=2.26
 
 LINUX_VER=2.6.34.7
 LINUX_SUBVER=2.6
