@@ -11,7 +11,7 @@ GCC_VER=4.7.4
 # GCC_EXTRA_VER=4.9.3
 GCC_EXTRA_VER=5.2.0
 # BINUTILS_VER=2.22
-BINUTILS_VER=2.25
+BINUTILS_VER=2.26
 
 LINUX_VER=3.2.27
 LINUX_SUBVER=3.x
