@@ -13,7 +13,7 @@ GCC_VER=4.1.2
 # GCC_EXTRA_VER=4.9.3
 GCC_EXTRA_VER=5.2.0
 # BINUTILS_VER=2.18
-BINUTILS_VER=2.25
+BINUTILS_VER=2.26
 
 LINUX_VER=2.4.37.9
 LINUX_SUBVER=2.4
