@@ -1,11 +1,12 @@
 --- v1.3 (2016-xx-xx) ---
 * Add new packages: yasm, libjpeg-turbo, protobuf, sdl2.
 * Bump GCC_EXTRA_VER from 5.1.0 to 5.2.0.
+* Update BINUTILS_VER from 2.25 to 2.26 in all configs.
 
 --- v1.2 (2015-07-11) ---
 * Rewrite IsVer1GreaterOrEqualToVer2() function without using of dpkg
   (for non Debian-based systems).
-* Update OPENSSL_VER from 1.0.2a to 1.0.2d  in all static configs.
+* Update OPENSSL_VER from 1.0.2a to 1.0.2d in all static configs.
 * Add support of AstraLinux 1.3 and 1.4 [amd64] (static).
 * Add new packages: libgpg-error, libfcgi.
 * Fix build of openssl package.
